--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="header-container container">
         <nav class="header-navigation">
           <a class="header-logo link" href="./index.html"
@@ -61,16 +61,16 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
     <main>
-      <section class="solutions">
+      <!-- <section class="solutions">
         <div class="container solutions-container">
           <h1 class="solutions-title">
             Effective Solutions <br />for Your Business
           </h1>
           <button class="solutions-btn" type="button">Order Service</button>
         </div>
-      </section>
+      </section> -->
       <!-- Describe -->
       <section class="features">
         <div class="container features-container">
@@ -129,7 +129,7 @@
         </div>
       </section>
       <!-- Our Team -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container team-container">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list list">
@@ -387,9 +387,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
       <!-- Our Portfolio -->
-      <section class="portfolio">
+      <!-- <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -522,12 +522,12 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
 
     <!-- footer -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
           <a class="footer-logo link" href="./index.html"
@@ -586,9 +586,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
     <!-- BACKDROP -->
-    <div class="backdrop">
+    <!-- <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -676,6 +676,6 @@
           <button type="submit" class="modal-form-btn">Send</button>
         </form>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
