--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
       </section>
       <!-- Our Team -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container team-container">
           <h2 class="team-title section-title">Our Team</h2>
           <ul class="team-list list">
@@ -387,9 +387,9 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
       <!-- Our Portfolio -->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -522,7 +522,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer -->
