--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
         </div>
       </section>
       <!-- Our Portfolio -->
-      <!-- <section class="portfolio">
+      <section class="portfolio">
         <div class="container portfolio-container">
           <h2 class="portfolio-title">Our Portfolio</h2>
 
@@ -522,7 +522,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <!-- footer -->
