--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
     </main>
 
     <!-- footer -->
-<!-- 
+
     <footer class="footer">
       <div class="container footer-container">
         <div class="footer-container-logo">
@@ -586,7 +586,7 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer>
     <!-- BACKDROP -->
     <!-- <div class="backdrop">
       <div class="modal">
