--- a/index.html
+++ b/index.html
@@ -63,14 +63,14 @@
       </div>
     </header> -->
     <main>
-      <!-- <section class="solutions">
+      <section class="solutions">
         <div class="container solutions-container">
           <h1 class="solutions-title">
             Effective Solutions <br />for Your Business
           </h1>
           <button class="solutions-btn" type="button">Order Service</button>
         </div>
-      </section> -->
+      </section>
       <!-- Describe -->
       <section class="features">
         <div class="container features-container">
