--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </svg>
         </button>
       </div>
-      <div class="mob-menu">
+      <div class="mob-menu ">
         <div>
         <button type="button" class="mob-menu-btn">
           <svg class="mob-menu-btn-icon" width="8" height="8">
@@ -780,7 +780,7 @@
       </div>
     </footer>
     <!-- BACKDROP -->
-    <!-- <div class="backdrop">
+    <div class="backdrop">
       <div class="modal">
         <button type="button" class="modal-btn">
           <svg class="modal-btn-icon" width="8" height="8">
@@ -855,19 +855,23 @@
               value="true"
               required
             />
-            <label class="check-text" for="user-privacy">
+            
+              <label class="check-text" for="user-privacy">
               <span class="icon-checkbox">
                 <svg class="check-text-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-Vector-1"></use>
                 </svg>
-              </span>
+              </span>     
+            </label>   
+ <span class="privacy-text">
               I accept the terms and conditions of the
               <a class="checkbox-link" href="">Privacy Policy</a>
-            </label>
+            </span>
+            
           </div>
           <button type="submit" class="modal-form-btn">Send</button>
         </form>
       </div>
-    </div> -->
-  </body>
+    </div> 
+  </body> 
 </html>
